--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-spawn": "^0.4.0",
     "gulp-stylelint": "^4.0.0",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-typescript": "^4.0.2",
     "js-yaml": "^3.6.1",
     "lodash": "^4.17.4",
     "ngrok": "^2.2.2",
@@ -46,6 +47,8 @@
     "singularitygs": "^1.7.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^4.0.3",
     "webpagetest": "^0.3.4"
   },
   "devDependencies": {
