--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-stylelint": "^4.0.0",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-typescript": "^4.0.2",
+    "gulp-watch": "^5.0.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.17.4",
     "ngrok": "^2.2.2",
