--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-cached": "^1.1.0",
+    "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.3.1",
