--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngrok": "^2.2.2",
     "node-normalize-scss": "^3.0.0",
     "node-notifier": "^5.1.2",
+    "object-assign-deep": "^0.4.0",
     "portscanner": "^2.1.1",
     "pre-commit": "^1.2.2",
     "psi": "^3.0.0",
